# PRG29003

./: README.md
arvores-binarias/: README.md  balanceia-arvore.cpp  compara-arvores.cpp  cria-arvore-especifica.cpp  criar-arvore.cpp  exemplo-arvore.cpp  extrair-dados-arvore.cpp  ultimas-palavras-alfabetic.cpp
aula1-intro-c++/: ex0-basics.cpp  ex3.cpp  ex4-fatora-num.cpp
aula2-classes-objetos/: classe-string.cpp  ex1-inverte-string.cpp  ex2-conta-palavras.cpp  ex3-substitui-substring.cpp
filas/: cria-filas.cpp  fila_substrings.cpp  func-enfileirador.h  intro.md  template-filas.cpp
intro/: aquecimento-busca-arquivo.c  aquecimento.c
jogo-da-forca/: forca  jogo-da-forca.cpp
listas/: README.md  comprime-ip6.cpp  concatena-listas.cpp  conta-palavras-repetidas.cpp  copia-lista.cpp  copia-string-iteracao.cpp  cria-lista-ordenada-inteiros-aleatorios.cpp  exemplo-lista.cpp  expande-ip6.cpp  filtro-contador.cpp  inverte-ordem-palavras.cpp  junta-lista-em-string.cpp  limpa-substrings.cpp  lista-contadores.cpp  lista-inteiros-aleatorios.cpp  listas-iteracao.cpp  ordena-tamanho-strings.cpp  procura-inteiros.cpp  remove-repetidas.cpp  verifica-lista-inteiros-ordenada.cpp
listas/RemoveRepetidas/: CMakeLists.txt  main.cpp  termtest.cpp
listas/RemoveRepetidas/data/: arquivo1.txt  arquivo2.txt  res1.txt  res2.txt
pilhas/: empilha-caracteres.cpp  exemplo-pilha.cpp  intro.md  inversor_linhas.cpp  template-pilha.cpp
pilhas/InversorLinhas/: CMakeLists.txt  Terminal.cpp  Terminal.h  main.cpp  termtest.cpp
pilhas/InversorLinhas/data/: palavras.txt  pessoas.txt  result.txt
(+208 files in other folders)
