cmake_minimum_required(VERSION 3.14)
project(InversaoString)

set(CMAKE_CXX_STANDARD 14)

add_executable(InversaoString main.cpp)
add_subdirectory(googletest)
include_directories(googletest/include googletest)

add_executable(runTerm termtest.cpp Terminal.cpp Terminal.h)

target_link_libraries(runTerm gtest gtest_main util)
